# GoWork_AI_agent

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  compute-embeddings.yml  db-migrate.yml  ec2-debug.yml
agent/: graph.py  llm.py  llm_logger.py  memory.py  parsers.py  prompt.py  prompts.py  router.py  state.py
agent/nodes/: general_chat.py  intent.py  job_apply.py  job_inquiry.py  job_recommend.py  profile.py  setup.py
backend/: cli.py  config.py  main.py  schema.sql
backend/database/: connection.py  queries.py
backend/migrations/: alter_feedbacks.sql  create_users_and_applications.sql
backend/models/: orm.py  schemas.py
backend/repositories/: __init__.py  chat_repository.py  feedback_repository.py  job_repository.py  user_repository.py
backend/routers/: auth.py  chat.py  feedback.py  recommend.py  user.py
backend/schemas/: __init__.py  auth.py  chat.py  feedback.py  job.py  user.py
backend/scoring/: __init__.py  category.py  scorer.py  weights.py
backend/services/: __init__.py  auth.py  feedback_service.py  recommend_service.py  user_service.py
backend/tests/: conftest.py  test_chat.py  test_check_region.py  test_feedback.py  test_integration_repositories.py  test_recommend.py  test_recommend_service.py  test_scoring.py  test_user.py
docs/: architecture.md
frontend/: pubspec.yaml
frontend/lib/: app.dart  main.dart
scripts/: compute_embeddings.py
(+21 files in other folders)
