[tool.poetry]
name = "gowork-ai-agent"
version = "0.1.0"
description = "시니어 구인구직 AI 에이전트"
authors = []
packages = [
    { include = "agent" },
    { include = "backend" },
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.3.0"
langchain-core = ">=0.3.0"
langchain-community = ">=0.3.0"
langchain-groq = ">=0.2.0"
langgraph = ">=0.2.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
sqlalchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.0"
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
pyjwt = ">=2.8.0"
python-multipart = ">=0.0.9"
json-repair = "^0.59.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
ruff = ">=0.4.0"
pre-commit = "^4.6.0"
commitizen = ">=3.0.0"

[tool.poetry.scripts]
serve = "backend.main:app"
cli = "backend.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
